Feature : "Quest 구조 완성, EventMgr추가, 기존 EventMgr -> InteractionMgr로 변경"

--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -620,7 +620,9 @@
     <ClCompile Include="..\Code\UI_BossHP.cpp" />
     <ClCompile Include="..\Code\UI_Cursor.cpp" />
     <ClCompile Include="..\Code\UI_Dialog.cpp" />
-    <ClCompile Include="..\Code\UI_ExclamationMark.cpp" />
+    <ClCompile Include="..\Code\UI_ExclamationMark.cpp">
+      <FileType>CppCode</FileType>
+    </ClCompile>
     <ClCompile Include="..\Code\UI_ItemInfo.cpp" />
     <ClCompile Include="..\Code\UI_LoadingBackGround.cpp" />
     <ClCompile Include="..\Code\UI_LoadingOgu.cpp" />
