--- a/Framework/Engine/Utility/Include/Utility.vcxproj.filters
+++ b/Framework/Engine/Utility/Include/Utility.vcxproj.filters
@@ -82,9 +82,6 @@
     <Filter Include="05. Component\05. RigidBody">
       <UniqueIdentifier>{89a82244-198a-4d7f-9cce-0b9e7fd95c49}</UniqueIdentifier>
     </Filter>
-    <Filter Include="00. Manager\06. EventMgr">
-      <UniqueIdentifier>{238b1654-e1ab-402f-9f3d-41e29a8b9cd1}</UniqueIdentifier>
-    </Filter>
     <Filter Include="05. Component\00. VIBuffer\05. RcPuzzleTer">
       <UniqueIdentifier>{e9faae54-6c79-41b7-b2bb-ae6a4d3cb3b6}</UniqueIdentifier>
     </Filter>
@@ -99,6 +96,12 @@
     </Filter>
     <Filter Include="00. Manager\07. SoundMgr">
       <UniqueIdentifier>{869fe32c-c5b7-4d83-8cd8-82b8f38ec936}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="00. Manager\06. InteractionMgr">
+      <UniqueIdentifier>{238b1654-e1ab-402f-9f3d-41e29a8b9cd1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="00. Manager\08. EventMgr">
+      <UniqueIdentifier>{fedb74c0-bda4-478d-8899-3ee361d8c423}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -183,8 +186,8 @@
     <ClInclude Include="..\..\Header\RigidBody.h">
       <Filter>05. Component\05. RigidBody</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Header\EventMgr.h">
-      <Filter>00. Manager\06. EventMgr</Filter>
+    <ClInclude Include="..\..\Header\InteractionMgr.h">
+      <Filter>00. Manager\06. InteractionMgr</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Header\RcPuzzleBuff.h">
       <Filter>05. Component\00. VIBuffer\05. RcPuzzleTer</Filter>
@@ -194,6 +197,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Header\SoundMgr.h">
       <Filter>00. Manager\07. SoundMgr</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Header\EventMgr.h">
+      <Filter>00. Manager\08. EventMgr</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -275,8 +281,8 @@
     <ClCompile Include="..\Code\RigidBody.cpp">
       <Filter>05. Component\05. RigidBody</Filter>
     </ClCompile>
-    <ClCompile Include="..\Code\EventMgr.cpp">
-      <Filter>00. Manager\06. EventMgr</Filter>
+    <ClCompile Include="..\Code\InteractionMgr.cpp">
+      <Filter>00. Manager\06. InteractionMgr</Filter>
     </ClCompile>
     <ClCompile Include="..\Code\RcPuzzleBuff.cpp">
       <Filter>05. Component\00. VIBuffer\05. RcPuzzleTer</Filter>
@@ -286,6 +292,9 @@
     </ClCompile>
     <ClCompile Include="..\Code\SoundMgr.cpp">
       <Filter>00. Manager\07. SoundMgr</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\EventMgr.cpp">
+      <Filter>00. Manager\08. EventMgr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
