--- a/Framework/Client/Include/Client.vcxproj
+++ b/Framework/Client/Include/Client.vcxproj
@@ -310,6 +310,7 @@
     <ClInclude Include="..\Header\Npc_VillagerMonkey.h" />
     <ClInclude Include="..\Header\Npc_VillagerMoon.h" />
     <ClInclude Include="..\Header\Npc_Wholesaler.h" />
+    <ClInclude Include="..\Header\NueFlower.h" />
     <ClInclude Include="..\Header\PlantBall.h" />
     <ClInclude Include="..\Header\PlantCannon.h" />
     <ClInclude Include="..\Header\Particle_FixedLeaf.h" />
@@ -355,6 +356,7 @@
     <ClInclude Include="..\Header\QuestMgr.h" />
     <ClInclude Include="..\Header\QuickSlot.h" />
     <ClInclude Include="..\Header\QuizStatue.h" />
+    <ClInclude Include="..\Header\RabitObj.h" />
     <ClInclude Include="..\Header\RedBeatle.h" />
     <ClInclude Include="..\Header\RollingBug.h" />
     <ClInclude Include="..\Header\Scene_Loading.h" />
@@ -543,6 +545,7 @@
     <ClCompile Include="..\Code\Npc_VillagerMonkey.cpp" />
     <ClCompile Include="..\Code\Npc_VillagerMoon.cpp" />
     <ClCompile Include="..\Code\Npc_Wholesaler.cpp" />
+    <ClCompile Include="..\Code\NueFlower.cpp" />
     <ClCompile Include="..\Code\PlantBall.cpp" />
     <ClCompile Include="..\Code\PlantCannon.cpp" />
     <ClCompile Include="..\Code\Particle_FixedLeaf.cpp" />
@@ -587,6 +590,7 @@
     <ClCompile Include="..\Code\QuestMgr.cpp" />
     <ClCompile Include="..\Code\QuickSlot.cpp" />
     <ClCompile Include="..\Code\QuizStatue.cpp" />
+    <ClCompile Include="..\Code\RabitObj.cpp" />
     <ClCompile Include="..\Code\RedBeatle.cpp" />
     <ClCompile Include="..\Code\RollingBug.cpp" />
     <ClCompile Include="..\Code\Scene_Loading.cpp" />
