--- a/Framework/Engine/Utility/Include/Utility.vcxproj.filters
+++ b/Framework/Engine/Utility/Include/Utility.vcxproj.filters
@@ -106,6 +106,9 @@
     <Filter Include="00. Manager\07. SoundMgr\Lib">
       <UniqueIdentifier>{67821aff-8bbf-4c0f-b305-c74cf3f81050}</UniqueIdentifier>
     </Filter>
+    <Filter Include="04. GameObject\Camera\Veil">
+      <UniqueIdentifier>{d0b9944a-e036-41b6-94fc-f419bad609bd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Header\Scene.h">
