--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -622,6 +622,9 @@
     <Filter Include="99. Etc\Lib">
       <UniqueIdentifier>{29b77bf7-57bc-4198-853c-bf80196b0c48}</UniqueIdentifier>
     </Filter>
+    <Filter Include="01. Scene\02. Monkey_Forest\03. Monkey_Forest3">
+      <UniqueIdentifier>{84d2e101-14cb-46b8-8192-b58f3571278e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -1263,6 +1266,12 @@
     <ClInclude Include="..\..\ThirdParty\fmod_output.h">
       <Filter>99. Etc\Lib</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\FloorDoor.h">
+      <Filter>02. GameObject\11. FixedObj\03. Prop</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\Scene_MonkeyForest3.h">
+      <Filter>01. Scene\02. Monkey_Forest\03. Monkey_Forest3</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -1865,6 +1874,12 @@
     </ClCompile>
     <ClCompile Include="..\..\ThirdParty\imgui_widgets.cpp">
       <Filter>98. Manager\99. ImGui\Lib</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\FloorDoor.cpp">
+      <Filter>02. GameObject\11. FixedObj\03. Prop</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Scene_MonkeyForest3.cpp">
+      <Filter>01. Scene\02. Monkey_Forest\03. Monkey_Forest3</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
